test/tests/RangeTypeMismatch.expected
RangeTypeMismatch.panda:3:36: error: expected 'panda.core.UInt8', but found 'IntegerLiteral(-1)'
RangeTypeMismatch.panda:9:18: error: for loop cannot iterate over 'panda.core.SteppedRange<panda.core.UInt64, panda.core.Int64>'; endpoint and step types are not compatible
RangeTypeMismatch.panda:15:23: error: expected 'panda.core.SteppedRange<panda.core.Int8, panda.core.Int8>', but found 'panda.core.Range<panda.core.Int64>'
3 errors
